--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -22,11 +22,13 @@ jobs:
       - name: Run unit tests
         run: poetry run invoke coverage-xml
       
-      - name: Upload coverage report artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          slug: game-ai-platform-team/tira-ai-platform
         with:
-          name: backend-coverage
-          path: ./backend/coverage.xml
+          file: ./backend/coverage.xml
 
   Lint:
     runs-on: ubuntu-latest
