--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -23,11 +23,13 @@ jobs:
       - name: Run unit tests
         run: pnpm run coverage
 
-      - name: Upload coverage report artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          slug: game-ai-platform-team/tira-ai-platform
         with:
-          name: frontend-coverage
-          path: ./frontend/coverage/coverage-final.json
+          files: ./frontend/coverage/coverage-final.json
 
 
   Format:
