--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -57,6 +57,9 @@ jobs:
         run: poetry run invoke format
 
       - name: Commit and push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: EndBug/add-and-commit@v9
         with:
-          commit_message: Format code
+          author_name: github-actions[bot]
+          author_email: github-actions[bot]@users.noreply.github.com
+          message: Format code
+          pull: "--rebase"
