--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -49,9 +49,12 @@ jobs:
         run: pnpm run lint:fix
 
       - name: Commit and push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: EndBug/add-and-commit@v9
         with:
-          commit_message: "style: Format code"
+          author_name: github-actions[bot]
+          author_email: github-actions[bot]@users.noreply.github.com
+          message: Format code
+          pull: "--rebase"
 
   Lint:
     runs-on: ubuntu-latest
