--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Build:
+  Build_staging:
+    name: "Build (staging)"
     runs-on: ubuntu-latest
     environment: staging
     
@@ -40,30 +41,3 @@ jobs:
           build-args: |
             MODE=${{ vars.MODE }}
 
-  Build_staging:
-    name: Build (staging)
-    runs-on: ubuntu-latest
-    environment: staging
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Build image
-        id: build-image
-        uses: redhat-actions/buildah-build@v2
-        with:
-          image: tira-app:latest
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
-          containerfiles: |
-            ./Dockerfile
-          build-args: |
-            MODE=${{ vars.MODE }}
-
-      - name: Push to Docker Hub
-        uses: redhat-actions/push-to-registry@v2
-        with:
-          image: ${{ steps.build-image.outputs.image }}
-          tags: ${{ steps.build-image.outputs.tags }}
-          registry: docker.io/kontrakti
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
