--- a/.github/workflows/e2e_test.yml
+++ b/.github/workflows/e2e_test.yml
@@ -17,6 +17,13 @@ jobs:
       - name: Set up Node
         uses: ./.github/workflows/setup-node
 
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/Cypress
+          key: cypress-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
+      - run: pnpm install cypress
+
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
