--- a/.github/workflows/e2e_test.yml
+++ b/.github/workflows/e2e_test.yml
@@ -30,7 +30,7 @@ jobs:
           working-directory: ./frontend
           wait-on: "http://localhost:5000"
           start: |
-            cd ../backend && poetry run invoke start
+            pnpm run server
             pnpm run dev
 
       - name: Run e2e tests
