--- a/.github/workflows/e2e_test.yml
+++ b/.github/workflows/e2e_test.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           working-directory: ./frontend
           wait-on: "http://localhost:5000"
+          build: pnpm run build
           start: |
             pnpm run server
             pnpm run dev
