--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.0"
 python-chess = "^1.999"
 flask-socketio = "^5.3.6"
 numpy = "^1.26.4"
+flask-oidc = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
