--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,8 @@ python-dotenv = "^1.0.0"
 python-chess = "^1.999"
 flask-socketio = "^5.3.6"
 numpy = "^1.26.4"
-flask-oidc = "^2.1.1"
+authlib = "^1.3.0"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
