--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -16,6 +16,7 @@ jobs:
   Unit_test:
     name: Unit test
     runs-on: ubuntu-latest
+    environment: staging
     env:
       OIDC_CLIENT_ID: ${{ secrets.OIDC_CLIENT_ID }}
       OIDC_CLIENT_SECRET: ${{ secrets.OIDC_CLIENT_SECRET }}
