--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
     name: "Build (staging)"
     runs-on: ubuntu-latest
     environment: staging
-    
+
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -40,4 +42,3 @@ jobs:
           cache-to: type=gha,mode=max
           build-args: |
             MODE=${{ vars.MODE }}
-
