--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,9 +22,9 @@ pytest-xdist = "^3.5.0"
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
 isort = "^5.13.2"
-coverage = "^7.4.0"
 pylint = "^3.0.3"
 pytest = "^7.4.4"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
