--- a/.github/workflows/setup-poetry/action.yml
+++ b/.github/workflows/setup-poetry/action.yml
@@ -1,6 +1,8 @@
 name: Set up
 description: Set up Python and Poetry
 inputs:
+  poetry-version:
+    default: "latest"
   cwd:
     description: Working directory
     required: false
@@ -16,11 +18,13 @@ runs:
       uses: actions/cache@v4
       with:
         path: ~/.local
-        key: poetry-0
+        key: venv-${{ runner.os }}-${{ inputs.poetry-version }}
 
     - name: Install Poetry
       if: steps.cached-poetry.outputs.cache-hit != 'true'
       uses: snok/install-poetry@v1
+      with:
+        version: ${{ input.poetry-version }}
 
     - name: Set up Python 3.11
       uses: actions/setup-python@v5
