--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,8 +17,9 @@ flask-socketio = "^5.3.6"
 numpy = "^1.26.4"
 authlib = "^1.3.0"
 requests = "^2.31.0"
-pytest-xdist = "^3.5.0"
 gitpython = "^3.1.42"
+gevent = "^24.2.1"
+pyuwsgi = "^2.0.23.post0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
