--- a/backend/wsgi.ini
+++ b/backend/wsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
 chdir=src
-wsgi-file=app.py
-callable=app
-http=:5000
+module=app:app
+http-socket=:5000
 master=true
 http-websockets=true
 gevent=1000
+die-on-term = true
