--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
     ],
     "python.testing.pytestArgs": [
         "-n=auto"
+    ],
+    "python.analysis.extraPaths": [
+        "backend/src"
     ]
 }
