--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,10 +26,7 @@ jobs:
     with:
       working-directory: ./backend
       environment: staging
-    secrets:
-      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      OIDC_CLIENT_ID: ${{ secrets.OIDC_CLIENT_ID }}
-      OIDC_CLIENT_SECRET: ${{ secrets.OIDC_CLIENT_SECRET }}
+    secrets: inherit
 
   e2e_test:
     name: End-to-end test
