--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,6 @@
         "noFallthroughCasesInSwitch": true
     },
     "include": ["src"],
-    //"exclude": ["src/tests/**"],
+    "exclude": ["src/tests/**"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
