--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,12 @@
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.6.5",
+        "bootstrap": "^5.3.3",
         "kokopu": "^4.8.1",
         "kokopu-react": "^3.0.2",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.10.2",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "recharts": "^2.12.0",
