--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite",
         "server": "cd ../backend && poetry run invoke start",
-        "build": "tsc && vite build",
+        "build": "tsc -p tsconfig.build.json && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "lint:fix": "eslint --fix .",
         "preview": "vite preview",
