--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,46 +17,47 @@
         "test:e2e": "cypress run"
     },
     "dependencies": {
-        "@reduxjs/toolkit": "^2.1.0",
-        "@types/lodash": "^4.14.202",
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
+        "@reduxjs/toolkit": "^2.2.2",
+        "@types/lodash": "^4.17.0",
+        "@types/react": "^18.2.70",
+        "@types/react-dom": "^18.2.22",
         "@vitejs/plugin-react": "^4.2.1",
-        "axios": "^1.6.5",
+        "axios": "^1.6.8",
         "bootstrap": "^5.3.3",
-        "kokopu": "^4.8.1",
-        "kokopu-react": "^3.0.2",
+        "connect-four-board": "^0.1.3",
+        "kokopu": "^4.10.0",
+        "kokopu-react": "^3.1.0",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
-        "recharts": "^2.12.0",
-        "sass": "^1.70.0",
-        "socket.io-client": "^4.7.4",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.8"
+        "recharts": "^2.12.3",
+        "sass": "^1.72.0",
+        "socket.io-client": "^4.7.5",
+        "typescript": "^5.4.3",
+        "vite": "^5.2.6"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.23.8",
-        "@babel/preset-react": "^7.23.3",
-        "@testing-library/jest-dom": "^6.2.1",
-        "@testing-library/react": "^14.1.2",
+        "@babel/preset-env": "^7.24.3",
+        "@babel/preset-react": "^7.24.1",
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.2",
         "@testing-library/user-event": "^14.5.2",
-        "@types/jest": "^29.5.11",
+        "@types/jest": "^29.5.12",
         "@types/jquery": "^3.5.29",
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
-        "@vitest/coverage-v8": "^1.2.1",
-        "cypress": "^13.6.3",
-        "eslint": "^8.56.0",
+        "@vitest/coverage-v8": "^1.4.0",
+        "cypress": "^13.7.1",
+        "eslint": "^8.57.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5",
+        "eslint-plugin-react-refresh": "^0.4.6",
         "jsdom": "^24.0.0",
-        "prettier": "^3.2.2",
-        "vitest": "^1.2.1"
+        "prettier": "^3.2.5",
+        "vitest": "^1.4.0"
     }
 }
